# superdialog

./: .gitignore  README.md  Taskfile.yml  bench_backend_ab.py  bench_backend_ab_n15.json  bench_backend_ab_n15_BEFORE.json  bench_backend_ab_n5.json  bench_backend_ab_smoke.json  bench_cache_live.py  bench_results_full.json  bench_results_smoke.json  benchmark_kairali.md  benchmark_kairali_results.md  pyproject.toml
docs/: 00-overview.md  01-architecture.md  02-api-reference.md  03-embedding-guides.md  04-playbook-guide.md  05-simple-format.md  README.md  decisions.md
docs/plans/: 2026-06-12-playbook-optimize-command.md  2026-06-12-playbook-optimize-design.md  2026-06-12-simple-playbook-format.md  2026-06-12-unified-dialogmachine-entry-command.md  2026-06-12-unified-dialogmachine-entry-design.md
examples/: playbook_from_flow.py  playbook_quickstart.py  run_benchmark.py
examples/datasets/: kairali_dataset.jsonl  universal_dataset.jsonl
examples/playbooks/: booking.yaml  flow_golf_course_booking_ai.personas.yaml  flow_golf_course_booking_ai.yaml  health_wellness_3node.yaml  health_wellness_booking_flow.yaml  kairali_enquiry_qualification.simple.yaml  realestate_site_visit.enriched.yaml  realestate_site_visit.personas.yaml  realestate_site_visit.simple.personas.yaml  realestate_site_visit.simple.yaml  realestate_site_visit.yaml
playground/: .gitignore
playground/agents/: playbooks.py
playground/docs/: 2026-06-13-playground-revamp-design.md  2026-06-13-playground-revamp-plan.md
playground/harness/: api.py  playbook_edit.py  playbook_store.py
playground/web/: package-lock.json  package.json
playground/web/src/: config.test.ts  config.ts  style.css
scripts/: assess_prompting.py
src/superdialog/: __init__.py  dialog_machine.py
src/superdialog/adapters/: livekit.py
src/superdialog/agents/: __init__.py  llm_agent.py
src/superdialog/benchmark/: __init__.py  __main__.py  cost.py  deterministic.py  loader.py  panel.py  ragas_scorer.py  report.py  runner.py
src/superdialog/cli/: main.py
src/superdialog/llm/: PROMPT_CACHING_PLAN.md  README.md  __init__.py  anyllm_provider.py  litellm_provider.py  openai_provider.py  prompt_cache.py  provider.py  resilience.py  resolver.py
tests/: conftest.py  scripted_toolcall.py  test_dialog_machine.py  test_dialog_machine_engine.py  test_dialog_machine_stream.py
tests/cli/: test_chat.py  test_generate.py  test_optimize.py
tests/dialog_machine/: conftest.py  test_criteria_cache_prefix.py  test_evaluator_surface.py  test_path_traversal.py  test_self_loop_protection.py  test_transition_call_count.py
tests/evals/: conftest.py  test_run_eval.py
tests/llm/: test_prompt_caching.py  test_provider_backends.py  test_resilience.py  test_resolver.py
tests/machine/: test_tool_serialization.py  test_toolcall_cache_prefix.py  test_toolcall_callback.py
tests/observability/: test_observer.py
tests/personas/: test_kyc_chatbot_developer.py
tests/playbook/: test_agent.py  test_agent_draft.py  test_compiler.py  test_director.py  test_director_cache_prefix.py  test_editable.py  test_end_on_frustration.py  test_eval_bridge.py  test_events.py  test_expr.py  test_gate_policy.py  test_generate.py  test_guidelines.py  test_models.py  test_multi_entity.py  test_optimize.py  test_personas.py  test_providers.py  test_providers_usage.py  test_render.py  test_replay.py  test_runtime.py  test_simple.py  test_split_utterance.py  test_state.py  test_talker.py  test_toolexec.py  test_traversal.py
tests/playground/: test_playbook_edit.py  test_playbook_endpoints.py  test_playbook_paths.py  test_playbook_store.py
tests/session/: test_worker_ctx_factory.py
tests/traversal/: test_traversal.py
(+57 files in other folders)
