[project]
name = "superdialog"
version = "0.2.10"
description = "Standalone dialog state machine framework — text in, text out."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Unpod", email = "parvinder@unpod.ai" }]
dependencies = [
  "pydantic>=2.5",
  "transitions>=0.9",
  "litellm>=1.50",
  "httpx>=0.27",
  "typing-extensions>=4.10",
  "python-dotenv>=1.0",
  "pyyaml>=6.0.3",
  "jinja2>=3.1.6",
  "anyio>=4.13.0",
]

[project.optional-dependencies]
livekit = ["livekit-agents>=0.12"]
pipecat = ["pipecat-ai>=0.0.50"]
fastapi = ["fastapi>=0.110", "uvicorn>=0.27"]
ws = ["websockets>=12"]
mcp = ["mcp>=0.9"]
langchain = ["langchain-core>=0.3"]
langfuse = ["langfuse>=2.0,<3.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "anyio>=4", "ruff>=0.4", "pyrefly>=0.1"]
evals = ["openai>=1.0"]
# Voice-agent playground (playground/) — drives a live unpod AgentRunner over a
# supervoice speech backend. unpod installs from PyPI so a fresh clone is
# self-contained; overlay an editable ../unpod-sdk to co-develop the SDK
# (`task pg-local`).
playground = [
  "unpod>=0.1,<0.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "loguru>=0.7",
  "livekit-agents>=1.0,<2",
]
anyllm = [
    "any-llm-sdk[anthropic,openai]>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/geneffic/superdialog"
Repository = "https://github.com/geneffic/superdialog"
[project.scripts]
superdialog = "superdialog.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superdialog"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Ported legacy tests use patterns (assigning to `result` to capture call
# shape, top-of-file imports gated behind a `pytest.importorskip`) that
# aren't worth scrubbing during the slim port. See Task 7.
"tests/dialog_machine/*" = ["F841", "E402", "F811"]
# Playground tests gate heavy optional imports behind ``pytest.importorskip``,
# so their module-level imports intentionally follow those calls (E402).
"tests/playground/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
